--- a/ga.html
+++ b/ga.html
@@ -1,23 +1,27 @@
 <html>
 <<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125078053-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125078053-1
+"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-125078053-1');
+  gtag('config', 'UA-125078053-1
+');
 </script>
 >
 <title>My First Page</title>
   </<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125078053-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125078053-1
+"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-125078053-1');
+  gtag('config', 'UA-125078053-1
+');
 </script>
 >
 <body>Hello World</body>
