--- a/ga.html
+++ b/ga.html
@@ -7,8 +7,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-125078053-1
-');
+  gtag('config', 'UA-125078053-1');
 </script>
 >
 <title>My First Page</title>
@@ -20,8 +19,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-125078053-1
-');
+  gtag('config', 'UA-125078053-1');
 </script>
 >
 <body>Hello World</body>
