--- a/gapractice.html
+++ b/gapractice.html
@@ -1,4 +1,14 @@
 <html>
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125078053-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-125078053-1');
+</script>
+
  <body>
    <h1> Hollow my friends</h1>
    <p> I participate the Google Analytics in National Taiwan University 4:30 to 6:30,and friends can come to find me.
