--- a/ga.html
+++ b/ga.html
@@ -1,7 +1,7 @@
 <html>
-<<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125078053-1
-"></script>
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125078053-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -9,18 +9,8 @@
 
   gtag('config', 'UA-125078053-1');
 </script>
->
-<title>My First Page</title>
-  </<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125078053-1
-"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-125078053-1');
-</script>
->
-<body>Hello World</body>
+<title> Hellow my friends</tittle>
+</head>
+<body>I particiate the Google Analytics class in National Taiwan University 4:30 to 6:30,you can come to find me.</body>
 </html>
