--- a/ga.html
+++ b/ga.html
@@ -10,7 +10,7 @@
   gtag('config', 'UA-125078053-1');
 </script>
 
-<title> Hellow my friends</tittle>
+<title> Hellow my friends</title>
 </head>
 <body>I particiate the Google Analytics class in National Taiwan University 4:30 to 6:30,you can come to find me.</body>
 </html>
