--- a/ga.html
+++ b/ga.html
@@ -1,6 +1,5 @@
 <html>
-<head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+<<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125078053-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -8,7 +7,8 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-125078053-1');
-</script>
+</script>>
+  
 
 <title> Hellow my friends</title>
 </head>
