--- a/ga.html
+++ b/ga.html
@@ -1,5 +1,6 @@
 <html>
-<<!-- Global site tag (gtag.js) - Google Analytics -->
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125078053-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -7,8 +8,7 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-125078053-1');
-</script>>
-  
+</script>
 
 <title> Hellow my friends</title>
 </head>
