--- a/ga.html
+++ b/ga.html
@@ -12,4 +12,5 @@
 </script>
 </head>
 <body>I particiate the Google Analytics class in National Taiwan University 4:30 to 6:30,you can come to find me.</body>
+  <button type="button">Click Me!</button>
 </html>
