--- a/ga.html
+++ b/ga.html
@@ -13,5 +13,5 @@
 </head>
 <body>I particiate the Google Analytics class in National Taiwan University 4:30 to 6:30,you can come to find me.</body>
   <button type="button">Click Me!</button>
-  <input type="button" value="按鈕使用教學" onclick="location.href='https://www.google.com.tw/'">
+  <input type="button" value="請點我謝謝" onclick="location.href='https://www.google.com.tw/'">
 </html>
