--- a/ga.html
+++ b/ga.html
@@ -12,6 +12,20 @@
 </script>
 </head>
 <body>I particiate the Google Analytics class in National Taiwan University 4:30 to 6:30,you can come to find me.</body>
+  
+  <select name="cat_id1" id="cat_id1" >
+<option value="0">請選擇...</option>
+<option value="1" >資料挖礦Data Mining</option>
+<option value="2" >網路流量分析Google Analytics</option>
+<option value="3" >經濟Economisc</option>
+</select>
+
+<input type="button" value="確認" onclick="location.href='https://training.pada-x.com/google-analytics.htm'">
+
+<form id="form1" name="form1" method="post" action="">
+<p>
+
+<p>
   <button type="button">Click Me!</button>
   <input type="button" value="請點我謝謝" onclick="location.href='https://www.google.com.tw/'">
 </html>
