--- a/ga.html
+++ b/ga.html
@@ -26,5 +26,5 @@
 <p>
 
   
-<input type="button" value="回Google" onclick="location.href='https://www.google.com.tw/'"onclick=ga"('send', 'event', 'Link', '回Google', 'LINKTEXT');”
+<input type="button" value="回Google" onclick="location.href='https://www.google.com.tw/'"
 </html>
