--- a/ga.html
+++ b/ga.html
@@ -22,9 +22,11 @@
 
 <input type="button" value="確認" onclick="location.href='https://training.pada-x.com/google-analytics.htm'">
 
-<form id="form1" name="網路流量分析Google Analytics" method="post" action="">
+<form id="form1" name="form1" method="post" action="">
 <p>
 
-  
-<input type="button" value="回Google" onclick="location.href='https://www.google.com.tw/'"
+<p>
+
+  <input type="button" value="請點我謝謝" onclick="location.href='https://www.google.com.tw/'">
 </html>
+
