--- a/ga.html
+++ b/ga.html
@@ -27,6 +27,6 @@
 
 <p>
 
-  <input type="button" value="請點我謝謝" onclick="location.href='https://www.google.com.tw/'">
+  <input type="button" value="回Google" onclick="location.href='https://www.google.com.tw/'">
 </html>
 
