--- a/ga.html
+++ b/ga.html
@@ -29,7 +29,7 @@
 
   <input type="button" value="回Google" onclick="location.href='https://www.google.com.tw/'">
   
-  <a href="https://www.facebook.com/" title="回到facebook 事件追蹤" target="_blank" onClick="ga('send', 'event', 'Link', 'Click', 'GA分析流量範例');">回到facebook 事件追蹤</a>
+ <a href="https://www.facebook.com/" title="回到facebook" target="_blank" onClick="ga('send', 'event', 'Link', 'Click', '回到facebook');">回到facebook</a>
 
 </html>
 
