--- a/ga.html
+++ b/ga.html
@@ -28,6 +28,15 @@
 <p>
 
   <input type="button" value="回Google" onclick="location.href='https://www.google.com.tw/'">
+  <script a<script async src="https://www.google.com.tw/gtag/js?id==追蹤編號"></script>
+
+<script>
+
+
+
+<script>
+
+
   
  <a href="https://www.facebook.com/" title="回到facebook" target="_blank" onClick="ga('send', 'event', 'Link', 'Click', '回到facebook');">回到facebook</a>
 
