--- a/ga.html
+++ b/ga.html
@@ -28,7 +28,7 @@
 <p>
 
   <input type="button" value="回Google" onclick="location.href='https://www.google.com.tw/'">
-  <script  async src="https://www.google.com.tw/gtag/js?id==追蹤編號"></script>
+  <script  async src="https://www.google.com.tw/gtag/js?id==UA-125078053-1"></script>
 
 <script>
 
