--- a/ga.html
+++ b/ga.html
@@ -28,7 +28,7 @@
 <p>
 
   <input type="button" value="回Google" onclick="location.href='https://www.google.com.tw/'">
-  <script  async src="https://www.google.com.tw/gtag/js?id==UA-125078053-1"></script>
+  <script  async src="https://www.facebook.com/gtag/js?id==UA-125078053-1"></script>
 
 <script>
 
@@ -39,6 +39,6 @@
 
   
  <a href="https://www.facebook.com/" title="回到facebook" target="_blank" onClick="ga('send', 'event', 'Link', 'Click', '回到facebook');">回到facebook</a>
-
+  <script  async src="https://www.google.com.tw/gtag/js?id==UA-125078053-1"></script>
 </html>
 
