--- a/ga.html
+++ b/ga.html
@@ -30,7 +30,7 @@
   <input type="button" value="回Google" onclick="location.href='https://www.google.com.tw/'">
   <script  async src="https://www.google.com.tw/gtag/js?id==UA-125078053-1"></script>
 <script>
-gtag("event", "點擊","onclick", {"event_category": "首頁", "event_label": "回到Google",
+gtag("event", "點擊", {"event_category": "首頁", "event_label": "回到Google",
 
 "value": 1});
 
