--- a/industrial.html
+++ b/industrial.html
@@ -3,7 +3,16 @@
 <html>
 <head>
 <title> Hellow my friends</title>
-  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125078053-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-125078053-2');
+</script>
+
 </head>
 <body>I particiate the Google Analytics class in National Taiwan University 4:30 to 6:30,you can come to find me.</body>
   
