--- a/industrial.html
+++ b/industrial.html
@@ -14,7 +14,7 @@
 </script>
 
 </head>
-<body>I particiate the Google Analytics class in National Taiwan University 4:30 to 6:30,you can come to find me.</body>
+<body>I am learning my skills and I white them on the website.</body>
   
   
 </html>
