--- a/industrial.html
+++ b/industrial.html
@@ -14,7 +14,7 @@
 </script>
 
 </head>
-<body>I am learning my skills and I white them on the website.</body>
+<body>I am learning my skills and I write them on the website.</body>
   
   
 </html>
