--- a/industrial.html
+++ b/industrial.html
@@ -14,7 +14,7 @@
 </script>
 
 </head>
-<body>I am learning my skills and I write them on the website.</body>
+<body>My majour are MBA.I am learning my python skills .I will record the Industrial 4.0 and Python note on the website.</body>
   
   
 </html>
