--- a/industrial.html
+++ b/industrial.html
@@ -14,7 +14,16 @@
 </script>
 
 </head>
-<body>My majour are MBA.I am learning my python skills .I will record the Industrial 4.0 and Python note on the website.</body>
+<body>
+  My majour are MBA.<br>
+  <blockquote>
+  I am learning my<strong> python skills</strong> . </blockquote> <br>
+  I will record the <strong>Industrial 4.0 </strong>and Python note on the website.<br>
+
+
+  
+  
+  </body>
   
   
 </html>
