--- a/industrial.html
+++ b/industrial.html
@@ -15,12 +15,13 @@
 
 </head>
 <body>
+  <ul> information </ul>
   My majour are MBA.<br>
   <blockquote>
   I am learning my<strong> python skills</strong> . </blockquote> <br>
   I will record the <strong>Industrial 4.0 </strong>and Python note on the website.<br>
 
-
+<ul> html rowspan and colspan practice </ul>
   
   
   </body>
