--- a/industrial.html
+++ b/industrial.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <ul> information </ul>
-  My majour are MBA.<br>
+  My major are MBA.<br>
   <blockquote>
   I am learning my<strong> python skills</strong> . </blockquote> <br>
   I will record the <strong>Industrial 4.0 </strong>and Python note on the website.<br>
