--- a/industrial.html
+++ b/industrial.html
@@ -15,13 +15,13 @@
 
 </head>
 <body>
-  <ul> information </ul>
+  <ol> information </ol>
   My major are MBA.<br>
   <blockquote>
   I am learning my<strong> python skills</strong> . </blockquote> <br>
   I will record the <strong>Industrial 4.0 </strong>and Python note on the website.<br>
 
-<ul> html rowspan and colspan practice </ul>
+<ol> html rowspan and colspan practice </ol>
   
   
   </body>
