--- a/industrial.html
+++ b/industrial.html
@@ -16,13 +16,14 @@
 </head>
 <body>
   <ol> information </ol>
+<!--    --第一點 個人資訊>
   My major are MBA.<br>
   <blockquote>
   I am learning my<strong> python skills</strong> . </blockquote> <br>
   I will record the <strong>Industrial 4.0 </strong>and Python note on the website.<br>
 
 <ol> html rowspan and colspan practice </ol>
-  
+<!--    --2.欄合併和列合併的練習>
   
   </body>
   
