--- a/industrial.html
+++ b/industrial.html
@@ -22,9 +22,43 @@
   I am learning my<strong> python skills</strong> . </blockquote> <br>
   I will record the <strong>Industrial 4.0 </strong>and Python note on the website.<br>
 
-<ol> html rowspan and colspan practice </ol>
+<ol> html rowspan and colspan practice in game theory </ol>
 <!--    --2.欄合併和列合併的練習>
-  
+  <table>
+<tr colspan="4" > 賽局 </tr>
+
+<tr>
+  <td> player </td>
+  <td> 剪刀 </td>
+  <td> 石頭 </td>
+   <td> 布 </td>
+
+</tr>
+<tr>
+  <td>剪刀 </td>
+ <td> (0,0)</td>
+ <td> (-1,1)</td>
+ <td> (1,-1)</td>
+</tr>
+
+<tr>
+  <td>石頭 </td>
+ <td>(1,-1) </td>
+ <td> (0,0)</td>
+ <td> (1,-1)</td>
+</tr>
+
+<tr>
+  <td>布 </td>
+ <td> (-1,1)</td>
+ <td> (1,-1)</td>
+ <td> (0,0)</td>
+</tr>
+
+
+
+</table>
+
   </body>
   
   
