--- a/industrial.html
+++ b/industrial.html
@@ -24,7 +24,9 @@
 
 <ol> html rowspan and colspan practice in game theory </ol>
 <!--    --2.欄合併和列合併的練習>
-  <table>
+  <table border="1">
+  
+
 <tr colspan="4" > 賽局 </tr>
 
 <tr>
@@ -46,6 +48,8 @@
  <td>(1,-1) </td>
  <td> (0,0)</td>
  <td> (1,-1)</td>
+  
+  
 </tr>
 
 <tr>
