--- a/industrial.html
+++ b/industrial.html
@@ -18,8 +18,7 @@
   <ol> information </ol>
 <!--    --第一點 個人資訊>
   My major are MBA.<br>
-  <blockquote>
-  I am learning my<strong> python skills</strong> . </blockquote> <br>
+  <blockquote> I am learning my<strong> python skills</strong> . </blockquote> <br>
   I will record the <strong>Industrial 4.0 </strong>and Python note on the website.<br>
 
 <ol> html rowspan and colspan practice in game theory </ol>
