--- a/industrial.html
+++ b/industrial.html
@@ -22,7 +22,7 @@
   I will record the <strong>Industrial 4.0 </strong>and Python note on the website.<br>
 
 <ol> html rowspan and colspan practice in game theory </ol>
-<!--    --2.欄合併和列合併的練習>
+<!--    --2.欄合併和列合併的練習> <br>
 
 
   </body>
