--- a/industrial.html
+++ b/industrial.html
@@ -61,6 +61,10 @@
 
 
 </table>
+  
+<ol>超連結部分</ol>
+  <a href = "https://chenpinchen.github.io/industrial.html"
+     target="_blank"> Pin's website practice </a>
   </body>
   
   
