--- a/industrial.html
+++ b/industrial.html
@@ -13,6 +13,8 @@
   gtag('config', 'UA-125078053-2');
 </script>
 
+  <link rel="stylesheet" href="main.css">
+  
 </head>
 <body>
   <ol> information </ol>
